fix(app): styles not responsive

--- a/apps/app-history-spa/src/components/Loader.module.scss
+++ b/apps/app-history-spa/src/components/Loader.module.scss
@@ -1,6 +1,7 @@
 .wrapper {
   width: inherit;
   height: 75%;
+  width: 100%;
   position: absolute;
   display: grid;
   place-items: center;
